# agent_bid_rigging

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
docs/: PLANS.md
docs/design-docs/: bid-rigging-decision-model.md  capabilities-layer.md  core-beliefs.md  index.md  ocr-interface-contract.md  pdf-long-document-review.md  review-loop.md  review-result-templates.md  sop-phase-plan.md
docs/exec-plans/active/: bootstrap-harness.md  pdf-long-document-format.md  sop-phase1.md  sop-phase2.md  sop-phase3.md
examples/: bid_alpha.txt  bid_beta.txt  bid_gamma.txt  tender.txt
src/agent_bid_rigging/: cli.py  models.py
src/agent_bid_rigging/capabilities/: README.md  __init__.py  base.py
src/agent_bid_rigging/capabilities/ocr/: __init__.py  contracts.py  pdf_images.py  pipeline.py  prompts.py  qwen_backend.py  schemas.py
src/agent_bid_rigging/capabilities/pdf_sectioning/: __init__.py  pipeline.py  schemas.py
src/agent_bid_rigging/capabilities/pdf_tables/: __init__.py  pipeline.py  schemas.py
src/agent_bid_rigging/core/: __init__.py  artifacts.py  extractor.py  fusion.py  llm_review.py  opinion.py  runner.py  scoring.py  strategy.py
src/agent_bid_rigging/tests/: TEST.md  test_capabilities.py  test_core.py  test_full_e2e.py  test_fusion.py  test_llm_review.py  test_ocr_capability.py  test_ocr_contracts.py  test_pdf_sectioning.py  test_pdf_tables.py  test_runner_ocr_integration.py  test_strategy.py  test_web_demo.py
src/agent_bid_rigging/utils/: __init__.py  file_loader.py  openai_client.py
src/agent_bid_rigging/web/: __init__.py  app.py
